--- a/index.html
+++ b/index.html
@@ -1,25 +1,65 @@
-<html>
-    <head>
-        <title>Hello Habr</title>
-        <link rel="manifest" href="manifest.json">
-        <script src="hh.js"></script>
-        <link rel="stylesheet" href="hh.css" />
-        <script type="text/javascript">
-            if ('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('sw.js')
-                .then(function(registration) {
-                    console.log('Registration successful, scope is:', registration.scope);
-                })
-                .catch(function(error) {
-                    console.log('Service worker registration failed, error:', error);
-                });
-            }
-        </script>
-    </head>
-    <body>
-        <div class="center">
-            <p id="text"></p>
-        </div>
-        <div id="logo"></div>
-    </body>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <title>Запрос остатков</title>
+  <style>
+    body { font-family: sans-serif; margin: 20px; }
+    label { display: block; margin-bottom: 8px; }
+    input { padding: 6px; width: 300px; max-width: 100%; }
+    button { padding: 6px 12px; margin-left: 8px; }
+    pre {
+      background: #f5f5f5;
+      padding: 10px;
+      white-space: pre-wrap;
+      word-wrap: break-word;
+      margin-top: 16px;
+      border: 1px solid #ddd;
+    }
+  </style>
+</head>
+<body>
+  <h2>Запрос остатков</h2>
+
+  <label for="inputField">Введите значение для запроса:</label>
+  <input id="inputField" type="text" />
+  <button id="sendBtn">Отправить запрос</button>
+
+  <pre id="result"></pre>
+
+  <script>
+    const urlBase = "http://176.60.80.53:33891/pitka/hs/RemainingProductMobile/RemainingProduct";
+
+    document.getElementById("sendBtn").addEventListener("click", async () => {
+      const input = document.getElementById("inputField").value.trim();
+      const resultEl = document.getElementById("result");
+      resultEl.textContent = "Выполняется запрос...";
+
+      try {
+        // Если нужно передавать значение в query‑параметре, меняйте имя параметра (input) на нужное
+        const url = urlBase + "?input=" + encodeURIComponent(input);
+
+        const response = await fetch(url, {
+          method: "GET",
+          headers: {
+            "Authorization": "Basic " + btoa("Администратор:777"),
+            "Accept": "application/json"
+          }
+        });
+
+        if (!response.ok) {
+          const text = await response.text();
+          resultEl.textContent =
+            "Ошибка HTTP " + response.status + " " + response.statusText + "\n\n" + text;
+          return;
+        }
+
+        const data = await response.json();
+        resultEl.textContent = JSON.stringify(data, null, 2);
+      } catch (err) {
+        resultEl.textContent = "Ошибка при выполнении запроса:\n" + err;
+      }
+    });
+  </script>
+</body>
 </html>
