--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         const data = await response.json();
         resultEl.textContent = JSON.stringify(data, null, 2);
       } catch (err) {
-        resultEl.textContent = "Ошибка при выполнении запроса:\n" + err;
+        resultEl.textContent = "Ошибка при выполнении запроса:\n" + err + "\n" + url;
       }
     });
   </script>
