--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         if (!response.ok) {
           const text = await response.text();
           resultEl.textContent =
-            "Ошибка HTTP " + response.status + " " + response.statusText + "\n\n" + text;
+            "111Ошибка HTTP " + response.status + " " + response.statusText + "\n\n" + text;
           return;
         }
 
