--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <h2>Запрос остатков</h2>
 
-  <label for="inputField">Введите значение для запроса:</label>
+  <label for="inputField">Введите1 значение для запроса:</label>
   <input id="inputField" type="text" />
   <button id="sendBtn">Отправить запрос</button>
 
